# tnapy

./: .gitignore  CLAUDE.md  LEARNINGS.md  LICENSE  README.md  pyproject.toml  tna_comparison.Rmd  tna_complete_comparison.Rmd  tna_statistical_inference.Rmd  tutorial.ipynb
tests/: __init__.py  r_verification.R  test_bootstrap.py  test_cluster.py  test_compare.py  test_edge_cases.py  test_numerical.py  test_onehot_ctna.py  test_plot.py  test_r_equivalence.py
tests/data/: onehot_ctna_groundtruth.json  r_cs_custom.csv  r_cs_notest.csv
tna/: __init__.py  bootstrap.py  centralities.py  cliques.py  cluster.py  colors.py  communities.py  compare.py  group.py  model.py  plot.py  prepare.py  prune.py  transitions.py  utils.py
tna-js/: package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
tna-js/src/: index.ts
tna-js/src/analysis/: centralities.ts  cliques.ts  cluster.ts  communities.ts  compare.ts  index.ts  prune.ts
tna-js/src/core/: colors.ts  group.ts  index.ts  matrix.ts  model.ts  prepare.ts  rng.ts  transitions.ts  types.ts
tna-js/src/stats/: bootstrap.ts  index.ts
tna-js/tests/: analysis.test.ts  bootstrap.test.ts  centralities.test.ts  matrix.test.ts  model.test.ts  rng.test.ts
tna-js/tests/fixtures/: ground_truth.json
tna/data/: __init__.py  group_regulation.csv  group_regulation_long.csv
