[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tnapy"
version = "0.1.1"
description = "Transition Network Analysis for Python"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Mohammed Saqr", email = "mohammed.saqr@uef.fi"},
    {name = "Santtu Tikka", email = "santtu.tikka@jyu.fi"},
    {name = "Sonsoles López-Pernas", email = "sonsoles.lopez@uef.fi"}
]
keywords = [
    "network analysis",
    "transition networks",
    "sequence analysis",
    "markov chains",
    "centrality",
    "learning analytics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "networkx>=2.6.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mohsaqr/tnapy"
Documentation = "https://github.com/mohsaqr/tnapy#readme"
Repository = "https://github.com/mohsaqr/tnapy"
Issues = "https://github.com/mohsaqr/tnapy/issues"

[tool.setuptools.packages.find]
include = ["tna*"]

[tool.setuptools.package-data]
tna = ["data/*.csv", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pyparsing.exceptions.PyparsingDeprecationWarning",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
